Harden runtime command paths and VM UI state